# temporal-data

./: .gitignore  Cargo.toml  README.md  build.sh  systemd.sh  up.sh
migrations/: 20251023200455_trades.sql  20251025023206_initial.sql  20251025190734_views.sql  20251025195338_index.sql
src/: db.rs  main.rs  rpc.rs  time.rs  util.rs
