[package]
name = "temporal-data"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
eyre = "0.6.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
solana-program = "3.0.0"
solana-sdk = "3.0.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
