[package]
name = "temporal-data"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = { version = "0.4.9", features = ["serde", "serde-json", "serde_json"] }
bs58 = "0.5.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
eyre = "0.6.12"
futures = "0.3.31"
itertools = "0.14.0"
log = "0.4.28"
maplit = "1.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
solana-client = "3.0.8"
solana-program = "3.0.0"
solana-sdk = "3.0.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "bigdecimal"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
yellowstone-grpc-client = "10.0.0"
yellowstone-grpc-proto = { version = "10.0.1", features = ["plugin"] }
